# vantage

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
scripts/: package.sh
server/: Cargo.toml  Info.plist  build.rs
server/src/: ai.rs  calendar.rs  http.rs  instagram.rs  mail.rs  main.rs  model.rs  secrets.rs  store.rs
server/swift-lib/: Package.swift
server/swift-lib/Sources/calendar-lib/: calendar.swift
src/: App.tsx
src/components/ambient/: Ambient.tsx
src/components/board/: BoardHeader.tsx  CountUp.tsx  SplitFlap.css  SplitFlap.tsx
src/components/mail/: MailRow.tsx  MailTrack.tsx
src/components/signal/: PostCard.tsx  SignalTrack.tsx  Sparkline.tsx  StatTile.tsx
src/components/today/: EventBlock.tsx  TodayTrack.tsx  dayLayout.ts
src/components/ui/: index.tsx
src/features/settings/: SettingsSheet.tsx
src/lib/: data.ts  format.ts  mock.ts  store.ts  triage.ts  types.ts
src/styles/: global.css
