[package]
name = "vantage"
version = "0.1.0"
description = "Vantage command board (local server)"
authors = ["Karim"]
edition = "2021"

[build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swift-rs = "1.0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
